# infinity-rs

./: .gitattributes  Cargo.toml  README.md
msfs/: Cargo.toml  build.rs  build_nvg_shim.ps1
msfs/.cargo/: config.toml
msfs/examples/: comm_bus_gauge.rs  comm_bus_sytem.rs  io_system.rs  io_system_simple.rs  nanovg_shim_smoke.rs  network_fetch_system.rs  network_post_system.rs  nvg_render.rs  vars_full_api.rs
msfs/src/: abi.rs  context.rs  exports.rs  host.rs  lib.rs  modules.rs  prelude.rs  sys.rs  types.rs
msfs/src/bindgen_support/: wrapper.h
msfs/src/comm_bus/: mod.rs
msfs/src/io/: fs.rs  mod.rs
msfs/src/network/: mod.rs
msfs/src/nvg/: color.rs  context.rs  enums.rs  mod.rs  paint.rs  path.rs  readme.md  render.rs  shape.rs  text.rs  transform.rs
msfs/src/render/: color.rs  mod.rs  nanovg_api.rs  nanovg_shim.rs
msfs/src/utils/: mod.rs
msfs/src/vars/: a_var.rs  l_var.rs  mod.rs
msfs_derive/: Cargo.toml
msfs_derive/src/: lib.rs
msfs_sdk/: Cargo.toml
msfs_sdk/src/: lib.rs
nvg_shim/: .clang-format  CMakeLists.txt  shim_impl.cpp
nvg_shim/nvg/: fontstash.h  nanovg.cpp  nanovg.h  nanovg_sw.h  stb_image.h  stb_truetype.h
